# HoaLibrary-Unity

./: .gitignore  .gitmodules  .travis  .travis.yml  README.md  appveyor.yml
Assets/: MainAudioMixer.mixer
Assets/HoaLibrary/Demos/Materials/: BlueGlow.mat  BoxTexture.mat  New Terrain.asset  RedGlow.mat  Rouge.mat  TransparenceBleu.mat
Assets/HoaLibrary/Demos/Prefabs/: SphericalAudioSource.prefab
Assets/HoaLibrary/Demos/Scenes/: HoaLibrary Demo.unity  HoaLibrary Test.unity
Assets/HoaLibrary/Demos/Scripts/: AudioMapping.cs  FlyCamera.cs  SourceRotateArround.cs
Assets/HoaLibrary/Plugins/x86_64/: AudioPluginHoaLibrary.bundle
Assets/HoaLibrary/Resources/: HoaLibraryAudioMixer.mixer
Assets/HoaLibrary/Scripts/: HoaLibrary.cs  HoaLibraryAudioSource.cs
Assets/HoaLibraryVR/Demos/Scripts/: SourceController.cs
Assets/HoaLibraryVR/Materials/: Ground.asset
Assets/HoaLibraryVR/Plugins/x86_64/: AudioPluginHoaLibraryVR.bundle
Assets/HoaLibraryVR/Prefabs/: SphericalAudioSource.prefab
Assets/HoaLibraryVR/Resources/: HoaLibraryVRAudioMixer.mixer
Assets/HoaLibraryVR/Scenes/: scene_test.unity
Assets/HoaLibraryVR/Scripts/: AudioMapping.cs  HoaLibraryVRAudioSource.cs
Assets/Materials/: Blue.mat  Noir.mat  Rouge.mat
Assets/Resources/: HoaLibraryVRAudioMixer.mixer
Assets/Scenes/: scene_test.unity
Assets/Scripts/: HoaLibraryVR.cs  HoaLibraryVRAudioSource.cs  HoaLibraryVR_Debugger.cs  SourceController.cs
NativeCode/: .gitignore  AudioPluginInterface.h  AudioPluginUtil.cpp  AudioPluginUtil.h  CMakeLists.txt  Debug.cpp  Debug.h  HoaLibraryApi.cpp  HoaLibraryApi.h  HoaLibraryUnity.cpp  HoaLibraryUnity.h  HoaLibraryVR.cpp  HoaLibraryVR.h  PluginList.h  Plugin_HoaLibraryVR.cpp  Plugin_HoaLibraryVR_Renderer.cpp  Plugin_HoaLibraryVR_Spatializer.cpp  Plugin_HoaLibrary_Renderer.cpp  Plugin_HoaLibrary_Spatializer.cpp  UnityCallbacks.hpp
NativeCode/Xcode/AudioPluginHoaLibraryVR.xcodeproj/: project.pbxproj
NativeCode/Xcode/AudioPluginHoaLibraryVR.xcodeproj/xcshareddata/xcschemes/: AudioPluginHoaLibraryVR.xcscheme
ProjectSettings/: AudioManager.asset  ProjectSettings.asset
